<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNewVersionCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNewVersionCaption"
        android:layout_margin="@dimen/activity_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/tvNewVersionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNewVersionText"
        android:textAlignment="center"
        android:layout_margin="@dimen/activity_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnNewVersionCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNewVersionCancel"
            android:layout_weight="1"
            android:background="@drawable/btn_main"
            android:layout_margin="@dimen/activity_margin"/>
        <Button
            android:id="@+id/btnNewVersionOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNewVersionOk"
            android:layout_weight="1"
            android:background="@drawable/btn_main"
            android:layout_margin="@dimen/activity_margin"/>

    </LinearLayout>






</LinearLayout>