<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/default_wallpaper"
    tools:context="org.toptaxi.ataxibooking.activities.AccountActivity">

    <include layout="@layout/item_title"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:orientation="vertical"
        android:layout_below="@+id/cvTitle"
        android:id="@+id/llAccountActivityData">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilAccountActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edAccountActivityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edAccountActivityName" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilAccountActivityMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edAccountActivityMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edAccountActivityMail"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilAccountActivityPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edAccountActivityPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/edAccountActivityPhone" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:id="@+id/llAccountActivityConfirmPhone"
        android:layout_below="@+id/llAccountActivityData">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilAccountActivityCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edAccountActivityCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberDecimal"
                android:hint="@string/edActivityLoginPassword" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAccountActivityConfirmPhone"
            android:onClick="btnAccountActivityConfirmPhoneClick"
            android:id="@+id/btnAccountActivityConfirmPhone"
            android:background="@drawable/btn_main"/>
    </LinearLayout>



</RelativeLayout>
