<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:context="org.toptaxi.ataxibooking.activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/splash_logo"
        android:layout_weight="3"
        android:contentDescription="@string/app_name" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvActivityLoginToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edActivityLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="numberDecimal"
            android:hint="@string/edActivityLoginPassword"
            android:imeOptions="actionSend"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnActivityLoginGetToken"
            android:id="@+id/btnActivityLoginGetToken"
            android:background="@drawable/btn_main"
            android:layout_margin="@dimen/activity_margin"/>

        <LinearLayout
            android:id="@+id/llActivityLoginProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pbActivityLogin"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvActivityLoginTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llActivityLoginGetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Прислать СМС повторно"
                android:id="@+id/btnActivityLoginGetPasswordSMS"
                android:background="@drawable/btn_main"
                android:layout_margin="@dimen/activity_margin"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Позвонить мне"
                android:id="@+id/btnActivityLoginGetPasswordCall"
                android:background="@drawable/btn_main"
                android:layout_margin="@dimen/activity_margin"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
