<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_order_ex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.toptaxi.ataxibooking.activities.NewOrderActivity"
    android:background="@mipmap/default_wallpaper">

    <include layout="@layout/item_title"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_above="@+id/llNewOrderActivityExtend"
        android:layout_below="@+id/cvTitle"
        android:id="@+id/rvNewOrderRoutePoints"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llNewOrderActivityExtend"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_above="@+id/btnNewOrderActivityWish">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/ic_conformation_time"
            android:layout_weight="1"
            android:background="@drawable/btn_main"
            android:layout_margin="@dimen/card_view_margin"
            android:id="@+id/btnNewOrderActivityTime"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/ic_conformation_pay_type_card_button"
            android:layout_weight="1"
            android:background="@drawable/btn_main"
            android:layout_margin="@dimen/card_view_margin"
            android:visibility="gone"
            android:id="@+id/btnNewOrderActivityServiceType"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/ic_conformation_pay_type_card_button"
            android:layout_weight="1"
            android:background="@drawable/btn_main"
            android:layout_margin="@dimen/card_view_margin"
            android:id="@+id/btnNewOrderActivityPaymentType"
            android:onClick="btnPayTypeClick"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNewOrderActivityWish"
        android:text="@string/btnNewOrderActivityWish"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:drawableEnd="@drawable/ic_mode_edit_gray"
        android:drawableRight="@drawable/ic_mode_edit_gray"
        android:background="@drawable/btn_main"
        android:layout_above="@+id/rlNewOrderActivityAddOrder"
        android:onClick="btnWishClick"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlNewOrderActivityAddOrder"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_alignParentBottom="true">
            <ImageButton
                android:layout_width="match_parent"
                android:id="@+id/btnNewOrderActivityAddOrder"
                android:background="@drawable/btn_main"
                android:onClick="btnNewOrderActivityAddOrderClick"
                android:contentDescription="@string/strNull"
                android:layout_height="60dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnNewOrderActivityAddOrder"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNewOrderActivityCost"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="center" />
                <ImageView android:id="@+id/ivNewOrderActivityPriceDivider"
                    android:background="@color/BlackDivider"
                    android:layout_width="1.0dip"
                    android:layout_height="match_parent"/>

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnNewOrderActivityAddCaption"
                    android:id="@+id/btnNewOrderActivityAddCaption"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

            </LinearLayout>


        </RelativeLayout>

</RelativeLayout>
